# ZiVID_ws

ZIVID/: README.md
ZIVID/zivid_bringup/: CMakeLists.txt  package.xml
ZIVID/zivid_bringup/config/: left_arm.yaml  right_arm.yaml
ZIVID/zivid_bringup/launch/: combined.launch  combined_movert.launch  move_rt_controller.launch  station_bringup.launch  task_launcher.launch  ur5_bringup_zivid.launch  ur5e_bringup_zivid.launch  ur_common_zivid.launch
ZIVID/zivid_description/: CMakeLists.txt  package.xml
ZIVID/zivid_description/launch/: ur5_upload_zivid.launch  ur5e_upload_zivid.launch
ZIVID/zivid_description/models/end_effectors/: UR5-MEG40_no_cam.stl  UR5-MEG40_no_cam_simplified.stl  dita_pin2pin.stl
ZIVID/zivid_description/models/zivid_camera/: Zivid_flange.stl
ZIVID/zivid_description/rviz/: zivid_simulation.rviz  zivid_station.rviz
ZIVID/zivid_description/xacro/: end_effectors.urdf.xacro  pg70_zivid.urdf.xacro  ur5.urdf.xacro  ur5_robot.urdf.xacro  ur5e.urdf.xacro  ur5e_robot.urdf.xacro  zivid_camera.urdf.xacro
ZIVID/zivid_moveit_config/: CMakeLists.txt
ZIVID/zivid_moveit_config/station_ur5_e_moveit_config/: CHANGELOG.rst  CMakeLists.txt  package.xml
ZIVID/zivid_moveit_config/station_ur5_e_moveit_config/config/: ur5e.srdf
ZIVID/zivid_moveit_config/station_ur5_e_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_e_moveit_controller_manager.launch.xml  ur5_e_moveit_planning_execution.launch  warehouse.launch
ZIVID/zivid_moveit_config/station_ur5_e_moveit_config/tests/: moveit_planning_execution.xml
ZIVID/zivid_moveit_config/station_ur5_moveit_config/: CMakeLists.txt  package.xml
ZIVID/zivid_moveit_config/station_ur5_moveit_config/launch/: default_warehouse_db.launch  demo.launch  (+12 more)
ZIVID/zivid_msgs/: CMakeLists.txt  package.xml
ZIVID/zivid_msgs/action/: cameraAquisition.action  moveWire.action
ZIVID/zivid_msgs/srv/: newPoseArray.srv  takeFrame.srv
ZIVID/zivid_simulation/: CMakeLists.txt  package.xml
ZIVID/zivid_simulation/config/: p2p_left_arm_simu.yaml  p2p_right_arm_simu.yaml  tasks_left_arm_simu.yaml
ZIVID/zivid_simulation/launch/: controller_utils.launch  move_rt_controller.launch  station_bringup.launch  uc1_task_launcher.launch
ZIVID/zivid_task/: CMakeLists.txt  package.xml
ZIVID/zivid_task/include/: auxiliary_arm_p2p.h  main_arm_p2p.h  operation_wait.h  p2p_tester_as.h
ZIVID/zivid_task/src/: arm_action_server.py  camera.py  camera_action_server.py  camera_aquisitor.py  supervisor.py
move_rt/: CMakeLists.txt  package.xml
move_rt/config/: tasks_arm_tiago.yaml  tasks_arm_ur5.yaml  tasks_left_arm.yaml  tasks_right_arm.yaml
move_rt/include/move_rt/: controlmanager.hpp  eeposition.hpp  elbowcontrol.hpp  emergencystop.hpp  jointlimiter.hpp  jointlimiternew.hpp  jointposition.hpp  prioritylevel.hpp  robotsafety.hpp
move_rt/launch/: controller_utils.launch  dual_arm_simulation.launch  robot_simulation.launch  tiago_simulation.launch  trajectory_test.launch
move_rt/src/: controlmanager.cpp  eeposition.cpp  elbowcontrol.cpp  emergencystop.cpp  joint_traj_action_client.cpp  jointlimiter.cpp  jointposition.cpp  positioninterface.cpp  prioritylevel.cpp  robotsafety.cpp  trajectory_node.cpp
move_rt/traj/: waypoints_test.yaml
move_rt/xacro/: ur5.urdf.xacro
schunk_pg70/: CMakeLists.txt  README.md  package.xml
schunk_pg70/action/: Grasp.action
schunk_pg70/include/: pg70_action_server.h  pg70_rs232_control.h
schunk_pg70/launch/: pg70_full.launch  pg70_rs232_control.launch  pg70_standalone.rviz  pg70_visualize_standalone.launch
schunk_pg70/src/: pg70_action_server.cpp  pg70_rs232_control.cpp  pg70_rs232_control_lib.cpp
schunk_pg70/urdf/: pg70.urdf.xacro  pg70_base.urdf.xacro  pg70_zivid.urdf.xacro
(+9 files in other folders)
